Aakash first commit

--- a/app/src/main/res/layout/data_adptor.xml
+++ b/app/src/main/res/layout/data_adptor.xml
@@ -3,16 +3,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:padding="8dp"
+    android:layout_height="wrap_content">
 
+ <TextView
+     android:id="@+id/question"
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     app:layout_constraintTop_toTopOf="parent"
+     android:textColor="@android:color/holo_red_dark"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintEnd_toEndOf="parent"
+     android:text="Question">
+
+ </TextView>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/question">
 
 
         <LinearLayout
@@ -20,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:gravity="center_vertical"
+            android:background="@drawable/bg_color"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -29,9 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:paddingStart="9dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="9dp"
-                android:paddingBottom="5dp"
+
                 android:text="A"
                 android:textColor="@color/black"
                 android:textSize="13sp" />
@@ -39,9 +49,8 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvOptionChoice"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
                 android:text="Option A"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -63,13 +72,13 @@
         <LinearLayout
             android:id="@+id/llOption2"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
+            android:background="@drawable/bg_color"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -84,10 +93,12 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvOptionChoice2"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
                 android:text="Option A"
+                android:paddingTop="5dp"
+                android:gravity="center"
+                android:paddingBottom="5dp"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
                 android:textSize="15sp" />
@@ -98,8 +109,9 @@
         <LinearLayout
             android:id="@+id/llOption3"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:background="@drawable/bg_color"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -118,9 +130,9 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvOptionChoice3"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
+
                 android:text="Option A"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
@@ -132,8 +144,9 @@
         <LinearLayout
             android:id="@+id/llOption4"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:background="@drawable/bg_color"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -152,9 +165,8 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvOptionChoice4"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
                 android:text="Option A"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
